# dakota_data_science_projects

./: README.md
cpp_FFNN_module/: CMakeLists.txt  FFNN_headers.h  README.md  (+3 more)
cpp_NeuralNet_module/: CMakeLists.txt  FFNN_module.cpp  charRecognitionModel.py
cpp_NeuralNet_module/WebApplication/: TestCharachter.jfif  app.py  imageProcessing.py  img_testing.py  requirements.txt
cpp_NeuralNet_module/WebApplication/static/css/: styles.css
cpp_NeuralNet_module/WebApplication/static/js/: script.js
cpp_NeuralNet_module/WebApplication/templates/: index.html
cpp_NeuralNet_module/cpp_build/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  FFNN_pymodule.vcxproj  FFNN_pymodule.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  test.sln
cpp_NeuralNet_module/cpp_build/Debug/: FFNN_pymodule.cp310-win_amd64.pyd  FFNN_pymodule.exp  FFNN_pymodule.lib  model_file.p
cpp_NeuralNet_module/cpp_build/FFNN_pymodule.dir/Debug/: FFNN_pymodule.cp310-win_amd64.pyd.recipe
cpp_NeuralNet_module/cpp_build/FFNN_pymodule.dir/Debug/FFNN_pymodule.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  FFNN_pymodule.lastbuildstate  FFNN_pymodule.write.1u.tlog  link.23068.delete.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
cpp_NeuralNet_module/cpp_build/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
cpp_NeuralNet_module/cpp_build/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.command.1.tlog
cpp_NeuralNet_module/cpp_build/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
(+37 files in other folders)
